# bangumi-follower

./: .gitignore  Cargo.toml  README.md
crates/ab-bin/: Cargo.toml
crates/ab-bin/src/: main.rs
crates/ab-core/: Cargo.toml
crates/ab-core/src/: lib.rs
crates/ab-core/src/checker/: mod.rs
crates/ab-core/src/config/: consts.rs  logging.rs  mod.rs  model.rs  parser.rs
crates/ab-core/src/update/: migration.rs  mod.rs  version_check.rs
crates/ab-database/: Cargo.toml
crates/ab-database/migrations/: 20240101000001_create_rssitem.sql  20240101000002_create_bangumi.sql  20240101000003_create_torrent.sql  20240101000004_create_user.sql  20240101000005_create_passkey.sql  20240101000006_create_schema_version.sql  20240101000007_add_weekday_locked.sql
crates/ab-database/src/: connection.rs  error.rs  lib.rs
crates/ab-database/src/models/: bangumi.rs  passkey.rs  rss.rs  torrent.rs  user.rs
crates/ab-database/src/repo/: bangumi.rs  mod.rs  passkey.rs  rss.rs  torrent.rs  user.rs
crates/ab-downloader/: Cargo.toml
crates/ab-downloader/src/: aria2.rs  client.rs  error.rs  lib.rs  mock.rs  path.rs  qb.rs
crates/ab-network/: Cargo.toml
crates/ab-network/src/: client.rs  error.rs  lib.rs
crates/ab-network/src/site/: mikan.rs  mod.rs
crates/ab-parser/: Cargo.toml
crates/ab-parser/src/: error.rs  lib.rs  offset_detector.rs  raw_parser.rs  title_parser.rs  torrent_parser.rs
crates/ab-parser/src/enricher/: bgm.rs  mikan.rs  mod.rs  tmdb.rs
crates/ab-rss/: Cargo.toml
crates/ab-rss/src/: analyser.rs  engine.rs  error.rs  lib.rs
references/: AUTO_BANGUMI_PROJECT.md  PROJECT.md  PROJECT_STAGE_0.md  PROJECT_STAGE_1.md  PROJECT_STAGE_10.md  PROJECT_STAGE_2.md  PROJECT_STAGE_3.md  PROJECT_STAGE_4.md  PROJECT_STAGE_5.md  PROJECT_STAGE_6.md  PROJECT_STAGE_7.md  PROJECT_STAGE_8.md  PROJECT_STAGE_9.md
