[workspace]
resolver = "2"
members = [
    "crates/ab-core",
    "crates/ab-database",
    "crates/ab-network",
    "crates/ab-parser",
    "crates/ab-downloader",
    "crates/ab-rss",
    "crates/ab-manager",
    "crates/ab-notification",
    "crates/ab-searcher",
    "crates/ab-core-thread",
    "crates/ab-security",
    "crates/ab-api",
    "crates/ab-mcp",
    "crates/ab-bin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["bangumi-follower"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "socks"] }
quick-xml = { version = "0.37", features = ["serialize"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
regex = "1"
jsonwebtoken = "9"
argon2 = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
futures = "0.3"
async-trait = "0.1"
lru = "0.12"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
semver = "1"
clap = { version = "4", features = ["derive"] }
urlencoding = "2"
