[package]
name = "ab-bin"
version.workspace = true
edition.workspace = true

[dependencies]
ab-core = { path = "../ab-core" }
ab-database = { path = "../ab-database" }
ab-network = { path = "../ab-network" }
ab-parser = { path = "../ab-parser" }
ab-downloader = { path = "../ab-downloader" }
ab-rss = { path = "../ab-rss" }
ab-manager = { path = "../ab-manager" }
ab-notification = { path = "../ab-notification" }
ab-searcher = { path = "../ab-searcher" }
ab-core-thread = { path = "../ab-core-thread" }
ab-security = { path = "../ab-security" }
ab-api = { path = "../ab-api" }
ab-mcp = { path = "../ab-mcp" }
axum.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
