[package]
name = "ab-parser"
version.workspace = true
edition.workspace = true

[dependencies]
ab-core = { path = "../ab-core" }
ab-network = { path = "../ab-network" }
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
once_cell.workspace = true
lru.workspace = true
chrono.workspace = true
quick-xml.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
urlencoding.workspace = true
