[package]
name = "ab-rss"
version.workspace = true
edition.workspace = true

[dependencies]
ab-core = { path = "../ab-core" }
ab-database = { path = "../ab-database" }
ab-network = { path = "../ab-network" }
ab-parser = { path = "../ab-parser" }
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true

[dev-dependencies]
sqlx.workspace = true
